# Kattis

./: CMakeLists.txt  README.md  ascii.cpp  boolean.cpp  carryoperation.cpp  cocktail.cpp  communication.cpp  countdoubles.cpp  dance.cpp  different.cpp  drunkvigenere.cpp  egypt.cpp  eligibility.cpp  estimatingtheareaofacircle.cpp  fiftyshades.cpp  flipflow.cpp  fontan.cpp  friday.cpp  functions.h  goodmorning.cpp  hangingout.cpp  hangman.cpp  harshad.cpp  heirsdilemma.cpp  helpaphd.cpp  humancannonball2.cpp  jobexpenses.cpp  kornislav.cpp  ladder.cpp  licensetolaunch.cpp  locust.cpp  logicfunctions.cpp  logicfunctions.h  lostlineup.cpp  main.cpp  massivecardgame.cpp  meowth.cpp  messy.cpp  mixedfractions.cpp  moderatepace.cpp  (+45 more)
bits/: stdc++.h
completed/: 99problems.cpp  accounting.cpp  acm.cpp  addition.cpp  addwords.cpp  alphabet.cpp  alphabetanimals.cpp  anagram.cpp  armystrengtheasy.cpp  armystrengthhard.cpp  ascii.cpp  asciirotation.cpp  attendance.cpp  averagecharacter.cpp  avergaes.cpp  awkwardparty.cpp  babelfish.cpp  babybites.cpp  babyloniannumbers.cpp  bard.cpp  basketball.cpp  batmanacci.cpp  beatthespread.cpp  beehive.cpp  beekeeper.cpp  bits.cpp  blackfriday.cpp  blueberrywaffle.cpp  bookingaroom.cpp  boolean.cpp  bracketmatching.cpp  bus.cpp  buses.cpp  calculator.cpp  cardsim.cpp  carousel.cpp  cetiri.cpp  chemistry.cpp  cinemacrowds.cpp  communication.cpp  (+132 more)
